--- a/style.css
+++ b/style.css
@@ -99,9 +99,6 @@ a:hover {
   position: relative;
 }
 
-
-
-
 .carousel-track {
   display: flex;
   transition: transform 1s ease-in-out;
@@ -213,7 +210,7 @@ a:hover {
 .sponsor-card p {
   font-size: clamp(0.9rem, 1.8vw, 1rem);
   line-height: 1.5;
-  flex: 1; /* push button to bottom */
+  flex: 1;
 }
 
 .discover-btn {
